--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,13 @@
 [metadata]
 name = python-bsn-neutronclient
+version = 0.0.1
 summary = Python bindings for Big Switch Networks Neutron API
 description-file =
     README.rst
 author = Big Switch Networks
 author-email = support@bigswitch.com
 home-page = http://www.bigswitch.com/
+license = ASL 2.0
 classifier =
     Environment :: OpenStack
     Intended Audience :: Information Technology
