OSP-241: fix entry point extension name
 - this caused an error when running neutron CLI commands
 - doesn't break functionality, but causes confusion
 - it also disables our plugin specific CLI commands
 - this patch fixes entry point and another import error for
   translating text

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ packages =
 
 [entry_points]
 neutronclient.extension =
-    bsn_extensions = python_bsnclient.v2_0.bsn_plugin_client
+    bsn_extensions = python_bsn_neutronclient.v2_0.bsn_plugin_client
 
 [build_sphinx]
 all-files = 1
