add testenv:dev in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,11 @@ commands = stestr run {posargs}
 basepython = python3
 commands = flake8 {posargs}
 
+[testenv:dev]
+basepython = python3
+# run locally (not in the gate) using editable mode
+# https://pip.pypa.io/en/stable/reference/pip_install/#editable-installs
+
 [testenv:py27-dev]
 basepython = python2.7
 commands =
