OSP-278: Add OpenStack CLI for force-bcf-sync
Also
- update doc
- remove py35 and use py36 to stay consistent with upstream

References:
- https://docs.openstack.org/python-openstackclient/latest/
- https://github.com/openstack/python-neutronclient/tree/master/neutronclient/osc

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = python-bsn-neutronclient
-version = 0.0.6
+version = 0.0.7
 summary = Python bindings for Big Switch Networks Neutron API
 description-file =
     README.rst
@@ -18,7 +18,7 @@ classifier =
     Programming Language :: Python :: 2
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
 
 [files]
 packages =
@@ -26,7 +26,13 @@ packages =
 
 [entry_points]
 neutronclient.extension =
-    bsn_extensions = python_bsn_neutronclient.v2_0.bsn_plugin_client
+    bsn_extensions = python_bsn_neutronclient.neutron.bsn_plugin_client
+
+openstack.cli.extension =
+    bsn_neutronclient = python_bsn_neutronclient.osc.plugin
+
+openstack.bsn_neutronclient.v2 =
+    force-bcf-sync = python_bsn_neutronclient.osc.v2.topology.topology_sync:ForceBcfSync
 
 [build_sphinx]
 all-files = 1
