--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-# The order of packages is significant, because pip processes them in the order
-# of appearance. Changing the order has an impact on the overall integration
-# process, which may cause wedges in the gate later.
-
 pbr>=2.0 # Apache-2.0
-python-neutronclient>=6.3.0  # Apache-2.0
+osc_lib>=1.8.0 # Apache-2.0
+oslo.i18n>=3.15.3 # Apache-2.0
+python_neutronclient>=6.3.0  # Apache-2.0
