--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = python-bsn-neutronclient
-version = 0.0.7
-summary = Python bindings for Big Switch Networks Neutron API
+name = python-arista-ccf-neutronclient
+version = 0.1.1
+summary = Python bindings for Arista Networks Converged Cloud Fabric Neutron API
 description-file =
     README.rst
-author = Big Switch Networks
-author-email = support@bigswitch.com
-home-page = http://www.bigswitch.com/
+author = Arista Networks
+author-email = support@arista.com
+home-page = http://www.arista.com/
 license = ASL 2.0
 classifier =
     Environment :: OpenStack
@@ -22,17 +22,17 @@ classifier =
 
 [files]
 packages =
-    python_bsn_neutronclient
+    python_arista_ccf_neutronclient
 
 [entry_points]
 neutronclient.extension =
-    bsn_extensions = python_bsn_neutronclient.neutron.bsn_plugin_client
+    arista_ccf_extensions = python_arista_ccf_neutronclient.neutron.arista_ccf_plugin_client
 
 openstack.cli.extension =
-    bsn_neutronclient = python_bsn_neutronclient.osc.plugin
+    arista_ccf_neutronclient = python_arista_ccf_neutronclient.osc.plugin
 
-openstack.bsn_neutronclient.v2 =
-    force-bcf-sync = python_bsn_neutronclient.osc.v2.topology.topology_sync:ForceBcfSync
+openstack.arista_ccf_neutronclient.v2 =
+    force-ccf-sync = python_arista_ccf_neutronclient.osc.v2.topology.topology_sync:ForceCcfSync
 
 [build_sphinx]
 all-files = 1
@@ -44,15 +44,15 @@ build-dir = doc/build
 upload-dir = doc/build/html
 
 [compile_catalog]
-directory = python_bsn_neutronclient/locale
-domain = python_bsn_neutronclient
+directory = python_arista_ccf_neutronclient/locale
+domain = python_arista_ccf_neutronclient
 
 [update_catalog]
-domain = python_bsn_neutronclient
-output_dir = python_bsn_neutronclient/locale
-input_file = python_bsn_neutronclient/locale/python_bsn_neutronclient.pot
+domain = python_arista_ccf_neutronclient
+output_dir = python_arista_ccf_neutronclient/locale
+input_file = python_arista_ccf_neutronclient/locale/python_arista_ccf_neutronclient.pot
 
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
-output_file = python_bsn_neutronclient/locale/python_bsn_neutronclient.pot
+output_file = python_b_neutronclient/locale/python_arista_ccf_neutronclient.pot
